# CesupaWebScrapping

./: main.py  pyproject.toml
